--- a/src/main/resources/style/main.css
+++ b/src/main/resources/style/main.css
@@ -291,9 +291,8 @@ h2 {
 .sort {
   position: absolute;
   padding-bottom: 30px;
-  width: 235px;
+  width: 350px;
   height: 18px;
-  margin-left: 60px;
   top: 948px;
   margin-left: 100px;
   font-family: 'Exo 2';
@@ -594,7 +593,7 @@ content {
   position: absolute;
   width: 199px;
   height: 126px;
-  left: 324px;
+  margin-left: 230px;
   top: 986px;
   padding: 0;
   z-index: 1100;
@@ -630,4 +629,8 @@ content {
 
 .arrw{
   cursor: pointer;
+}
+
+.drop_arrw {
+  margin-left: -40px;
 }
