--- a/src/main/resources/style/uchql.css
+++ b/src/main/resources/style/uchql.css
@@ -246,7 +246,7 @@
     width: 323px;
     height: 18px;
     left: 0px;
-    top: -20px;
+    top: -40px;
 
     font-family: 'Exo 2';
     font-style: normal;
@@ -254,6 +254,24 @@
     font-size: 18px;
     line-height: 100%;
     color: #406C9A;
+}
+
+.forms {  padding:11px;
+    width: 400px;
+    border-radius:10px;
+    border: none;
+}
+
+.forms2 {  padding:11px;
+    width: 1040px;
+    border-radius:10px;
+    border: none;
+}
+
+.forms3 {  padding:11px;
+    width: 590px;
+    border-radius:10px;
+    border: none;
 }
 
 
@@ -377,6 +395,8 @@
     background: #37DCF5;
     border-radius: 10px;
 
+    border: none;
+
     font-family: 'Exo 2';
     font-style: normal;
     font-weight: 500;
@@ -387,4 +407,29 @@
     text-align: center;
 
     color: #00345F;
+}
+
+.doks2 {position: absolute;
+    width: 94px;
+    height: 94px;
+    left: 600px;
+    top: 880px;
+}
+
+.prikrepit-dokument {position: absolute;
+    width: 194px;
+    height: 18px;
+    left: 709px;
+    top: 892px;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 100%;
+    /* identical to box height, or 18px */
+
+    text-decoration-line: underline;
+
+    color: #104781;
 }
