--- a/src/main/resources/style/main.css
+++ b/src/main/resources/style/main.css
@@ -481,13 +481,13 @@ h2 {
   margin-bottom: 30px;
 }
 
-.form3 {
+.form_3 {
   list-style: none;
   padding: 0;
   margin-bottom: 30px;
 }
 
-.form3 li input {
+.form_3 li input {
   width: 1040px;
   height: 50px;
   background: #FFFFFF;
@@ -631,6 +631,84 @@ content {
   cursor: pointer;
 }
 
-.drop_arrw {
+.drop_arrw1 {
   margin-left: -40px;
+}
+
+.drop_arrw2 {
+  margin-left: -40px;
+}
+
+.form_drop1 {
+  position: absolute;
+  width: 270px;
+  height: 456px;
+  margin-top: 17px;
+  padding: 0;
+  z-index: 1100;
+  overflow: hidden;
+  background: #FFFFFF;
+  box-shadow: 0px 6px 12px rgba(16, 71, 129, 0.1);
+  border-radius: 10px;
+  padding-top: 18px;
+}
+
+.form_drop1 li {
+  position: relative;
+  left: 0;
+  list-style: none;
+  width: 270px;
+  height: 30px;
+  padding-left: 25px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  cursor: pointer;
+  font-family: 'Exo 2';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  text-decoration: none;
+  color: #406C9A;
+}
+
+.form_drop1 li:hover{
+  background: #BAF3FC;
+}
+
+.form_drop2 {
+  position: absolute;
+  width: 270px;
+  height: 131px;
+  margin-top: 17px;
+  padding: 0;
+  z-index: 1100;
+  overflow: hidden;
+  background: #FFFFFF;
+  box-shadow: 0px 6px 12px rgba(16, 71, 129, 0.1);
+  border-radius: 10px;
+  padding-top: 18px;
+}
+
+.form_drop2 li {
+  position: relative;
+  left: 0;
+  list-style: none;
+  width: 270px;
+  height: 30px;
+  padding-left: 25px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  cursor: pointer;
+  font-family: 'Exo 2';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 100%;
+  text-decoration: none;
+  color: #406C9A;
+}
+
+.form_drop2 li:hover{
+  background: #BAF3FC;
 }
