--- a/src/main/resources/style/main.css
+++ b/src/main/resources/style/main.css
@@ -433,8 +433,11 @@ h2 {
 
 .form_gr2 {
   display: inline-block;
+  width: 590px;
   list-style: none;
+  padding: 0;
   margin-bottom: 30px;
+  margin-left: 50px;
 }
 
 .form_gr2 li input {
@@ -488,7 +491,7 @@ h2 {
 }
 
 .form_3 li input {
-  width: 1040px;
+  width: 1045px;
   height: 50px;
   background: #FFFFFF;
   border-radius: 10px;
@@ -549,12 +552,12 @@ h2 {
   display: inline-block;
   list-style: none;
   margin: 0;
-  margin-left: 50px;
+  margin-left: 55px;
   padding: 0;
 }
 
 .form_gr4 li input {
-  width: 270px;
+  width: 280px;
   height: 50px;
   background: #FFFFFF;
   border-radius: 10px;
@@ -641,7 +644,7 @@ content {
 
 .form_drop1 {
   position: absolute;
-  width: 270px;
+  width: 280px;
   height: 456px;
   margin-top: 17px;
   padding: 0;
@@ -678,7 +681,7 @@ content {
 
 .form_drop2 {
   position: absolute;
-  width: 270px;
+  width: 280px;
   height: 131px;
   margin-top: 17px;
   padding: 0;
