--- a/src/main/resources/style/shared.css
+++ b/src/main/resources/style/shared.css
@@ -54,6 +54,8 @@
   width: 1160px;
   height: 298px;
   top: 1746px;
+  margin: 0;
+  margin: auto;
   font-family: 'Exo 2';
   font-style: normal;
   font-weight: 400;
