--- a/src/main/resources/style/shared.css
+++ b/src/main/resources/style/shared.css
@@ -36,6 +36,12 @@
   padding-top: 21px;
   padding-right: 20px;
   left: 54px;
+  text-decoration: none;
+}
+
+.menu ul li a{
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
 .nav_btn {
