--- a/src/main/resources/style/lk.css
+++ b/src/main/resources/style/lk.css
@@ -129,6 +129,15 @@
     background: #BAF3FC;
     border-radius: 15px;}
 
+.table_uch {position: absolute;
+    width: 1160px;
+    height: 881px;
+    margin-left: 120px;
+    top: 558px;
+
+    background: #BAF3FC;
+    border-radius: 15px;}
+
 .txt_obsh {
     position: absolute;
     width: 400px;
@@ -434,6 +443,29 @@
     height: 55px;
     left: 400px;
     top: 1283px;
+
+    background: #37DCF5;
+    border-radius: 10px;
+
+    border: none;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    /* or 18px */
+
+    text-align: center;
+
+    color: #00345F;
+}
+
+.knopka_uch {position: absolute;
+    width: 340px;
+    height: 55px;
+    left: 400px;
+    top: 776px;
 
     background: #37DCF5;
     border-radius: 10px;
