--- a/src/main/resources/style/lk2.css
+++ b/src/main/resources/style/lk2.css
@@ -252,22 +252,57 @@
     width: 200px;
     height: 50px;
     left: 900px;
-    top: 150px;
+    top: 135px;
 
     background: #37DCF5;
     border-radius: 10px;
 
     border: none;
 
+
     font-family: 'Exo 2';
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 100%;
-    /* or 18px */
-
     text-align: center;
 
     color: #00345F;
 }
 
+.knopka_uch_unjoin {position: absolute;
+    width: 200px;
+    height: 50px;
+    left: 900px;
+    top: 135px;
+
+    background: #37DCF5;
+    border-radius: 10px;
+
+    border: none;
+    opacity: 0.3;
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    text-align: center;
+
+    color: #00345F;
+}
+
+.txt_ob_aktivnocti {
+    position: absolute;
+    width: 377px;
+    height: 14px;
+    left: 474px;
+    top: 152px;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+
+    color: #406C9A;
+}
