--- a/src/main/resources/style/lk2.css
+++ b/src/main/resources/style/lk2.css
@@ -306,3 +306,42 @@
 
     color: #406C9A;
 }
+
+.add_drop {
+    position: absolute;
+    width: 280px;
+    height: 131px;
+    margin-left: 881px;
+    top: 90px;
+    margin-top: 17px;
+    padding: 0;
+    z-index: 1100;
+    overflow: hidden;
+    background: #FFFFFF;
+    box-shadow: 0px 6px 12px rgba(16, 71, 129, 0.1);
+    border-radius: 10px;
+    padding-top: 18px;
+}
+
+.add_drop li{
+    position: relative;
+    left: 0;
+    list-style: none;
+    width: 270px;
+    height: 30px;
+    padding-left: 25px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    cursor: pointer;
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 100%;
+    text-decoration: none;
+    color: #406C9A;
+}
+
+.add_drop li:hover{
+    background: #BAF3FC;
+}
