--- a/src/main/resources/style/z_sobr_uch_3.css
+++ b/src/main/resources/style/z_sobr_uch_3.css
@@ -172,10 +172,72 @@ input{
     margin-right: 67px;
 }
 
+.vote{
+    margin: 0;
+    margin-bottom: 50px;
+}
+
+.vote tr{
+    display: inline-block;
+    margin: 0;
+}
+
+.vote tr td{
+    margin: 0;
+    width: 263px;
+    height: 51px;
+    text-align: center;
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 100%;
+    color: #406C9A;
+
+}
+
+.vote tr td input{
+    width: 17px;
+    height: 17px;
+    border: 1px solid #406C9A;
+    border-radius: 2px;
+}
+
+.bord td{
+    border: 1px solid #104781;
+    background: #BAF3FC;
+}
+
+.nobord{
+    border: 1px solid #104781;
+    background: #BAF3FC;
+    border-top: none;
+}
+
+.bn{
+    border: none;
+}
+
+.vote_btn{
+    width: 200px;
+    height: 50px;
+    background: #37DCF5;
+    border-radius: 10px;
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    text-align: center;
+    color: #104781;
+    border: none;
+    margin-left: 50px;
+}
+
 .base{
-    top: 864px;
+    margin-top: 90px;
 }
 
 .base_bg {
-    top: 864px;
+    margin-top: 90px;
 }
