--- a/src/main/resources/style/shared.css
+++ b/src/main/resources/style/shared.css
@@ -1,3 +1,7 @@
+html, body{
+  min-height: 100%;
+}
+
 .menu {
   position: absolute;
   width: 100%;
@@ -121,8 +125,7 @@
   width: 100%;
   left: 0;
   height: 298px;
-  top: 1746px;
-  bottom: 0;
+  margin-top: 1746px;
   background: #104781;
 }
 
