--- a/src/main/resources/style/z_sobr_uch_1.css
+++ b/src/main/resources/style/z_sobr_uch_1.css
@@ -232,3 +232,47 @@ input{
 .base_bg {
     margin-top: 2386px;
 }
+
+.knopka4 {position: absolute;
+    width: 439px;
+    height: 55px;
+    left: 116px;
+    top: 1775px;
+
+    background: #37DCF5;
+    border-radius: 10px;
+
+    border: none;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    /* or 18px */
+
+    text-align: center;
+
+    color: #00345F;
+}
+
+.knopka5 {position: absolute;
+    width: 439px;
+    height: 55px;
+    left: 605px;
+    top: 1775px;
+
+    background: #BAF3FC;
+    border-radius: 10px;
+
+    font-family: 'Exo 2';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    /* or 18px */
+
+    text-align: center;
+
+    color: #00345F;
+}
