--- a/src/main/resources/style/z_sobr_uch_1.css
+++ b/src/main/resources/style/z_sobr_uch_1.css
@@ -233,6 +233,10 @@ input{
     margin-top: 2386px;
 }
 
+.base{
+    margin-top: 2386px;
+}
+
 .knopka4 {position: absolute;
     width: 439px;
     height: 55px;
