--- a/src/main/resources/style/lk2.css
+++ b/src/main/resources/style/lk2.css
@@ -345,3 +345,11 @@
 .add_drop li:hover{
     background: #BAF3FC;
 }
+
+.base_bg{
+    margin-top: 1476px;
+}
+
+.base{
+    margin-top: 1476px;
+}
